# --------------------------------------------------------------------------------------------------------
# Setup library
# --------------------------------------------------------------------------------------------------------

saucer_bindings_add_module(desktop "SAUCER_DESKTOP_EXPORT")

# --------------------------------------------------------------------------------------------------------
# Include directories
# --------------------------------------------------------------------------------------------------------

target_include_directories(${MODULE_NAME} PUBLIC  "include")
target_include_directories(${MODULE_NAME} PRIVATE "include/saucer")

# --------------------------------------------------------------------------------------------------------
# Add Sources
# --------------------------------------------------------------------------------------------------------

target_sources(${MODULE_NAME} PRIVATE
    "src/desktop.cpp"
)

# --------------------------------------------------------------------------------------------------------
# Setup Dependencies
# --------------------------------------------------------------------------------------------------------

CPMFindPackage(
    NAME           saucer-desktop
    VERSION        4.2.0
    GIT_REPOSITORY "https://github.com/saucer/desktop"
)

target_link_libraries(${MODULE_NAME} PRIVATE saucer::desktop)
