# --------------------------------------------------------------------------------------------------------
# Setup library
# --------------------------------------------------------------------------------------------------------

saucer_bindings_add_module(loop "SAUCER_LOOP_EXPORT")

# --------------------------------------------------------------------------------------------------------
# Include directories
# --------------------------------------------------------------------------------------------------------

target_include_directories(${MODULE_NAME} PUBLIC  "include")
target_include_directories(${MODULE_NAME} PRIVATE "include/saucer")

# --------------------------------------------------------------------------------------------------------
# Add Sources
# --------------------------------------------------------------------------------------------------------

target_sources(${MODULE_NAME} PRIVATE
    "src/loop.cpp"
)

# --------------------------------------------------------------------------------------------------------
# Setup Dependencies
# --------------------------------------------------------------------------------------------------------

CPMFindPackage(
    NAME           saucer-loop
    VERSION        2.1.0
    GIT_REPOSITORY "https://github.com/saucer/loop"
)

target_link_libraries(${MODULE_NAME} PRIVATE saucer::loop)
