# --------------------------------------------------------------------------------------------------------
# Setup library
# --------------------------------------------------------------------------------------------------------

saucer_bindings_add_module(pdf "SAUCER_PDF_EXPORT")

# --------------------------------------------------------------------------------------------------------
# Include directories
# --------------------------------------------------------------------------------------------------------

target_include_directories(${MODULE_NAME} PUBLIC  "include")
target_include_directories(${MODULE_NAME} PRIVATE "include/saucer")

# --------------------------------------------------------------------------------------------------------
# Add Sources
# --------------------------------------------------------------------------------------------------------

target_sources(${MODULE_NAME} PRIVATE
    "src/pdf.cpp"
)

# --------------------------------------------------------------------------------------------------------
# Setup Dependencies
# --------------------------------------------------------------------------------------------------------

CPMFindPackage(
    NAME           saucer-pdf
    VERSION        3.1.0
    GIT_REPOSITORY "https://github.com/saucer/pdf"
)

target_link_libraries(${MODULE_NAME} PRIVATE saucer::pdf)
